# sorbe_tpl

./: Cargo.toml  Makefile.toml  README.md
deserializer/: Cargo.toml
examples/: app_config.conf  config.conf  macro_example.rs  playground.rs  schema.conf  traditional_example.rs
kernel/: Cargo.toml
kernel/src/: de.rs  error.rs  lib.rs  parse.rs  parser.rs  schema.rs  shared.rs  source.rs  syntax.rs  token.rs  tokenize.rs  value.rs
kernel/src/validator/syntax/: key.rs  line_structure.rs  mod.rs  value.rs
lexer/: Cargo.toml
lexer/src/: emit.rs  lib.rs  peekable_extend.rs  symbol.rs
lexer/src/sources/: config.rs  schema.rs
parser/: Cargo.toml
parser/src/: lib.rs  parse_impl.rs  schema_impl.rs  syntax.rs  token_analyzer.rs  value_impl.rs
parser/src/validator/syntax/: duplicates.rs  key_path_conflicts.rs  mod.rs
parser/src/validator/token/: key.rs  line_structure.rs  mod.rs  value.rs
sorbe_macro/: Cargo.toml
sorbe_macro/src/: config_node.rs  config_validator.rs  lib.rs
src/: cast.rs  from_reader.rs  from_schema.rs  from_str.rs  from_str_with_schema.rs  lib.rs  validation.rs
tests/: compile_fail_tests.rs  exer_test.rs  integration_test.rs  lexer_config_test.rs  lexer_schema_test.rs  serde_test.rs
tests/compile_fail/: deep_duplicate.rs  deep_duplicate.stderr  duplicate_keys.rs  duplicate_keys.stderr  invalid_field_name.rs  invalid_field_name.stderr  key_path_conflict.rs  key_path_conflict.stderr  multiple_conflicts.rs  multiple_conflicts.stderr
