[package]
name = "sorbe_tpl"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "kernel",
  "lexer",
  "parser",
]

[workspace.dependencies]
kernel = { path = "kernel" }
lexer = { path = "lexer" }
parser = { path = "parser" }

thiserror = "2.0.12"
indexmap = "2.9.0"
serde = { version = "1.0.219", features = ["derive"] } 

[dependencies]
kernel.workspace = true
lexer.workspace = true
parser.workspace = true

serde = { workspace = true, features = ["derive"] }
